--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "my-company-website",
-  "version": "0.1.0",
+  "name": "reignitesolutions.github.io",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.5"
+    "next": "^14.2.3",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.5",
-    "@eslint/eslintrc": "^3"
-  }
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "autoprefixer": "^10.4.19"
+  },
+  "description": "Reignite Solutions Next.js website with Tailwind CSS",
+  "author": "Reignite Solutions",
+  "license": "MIT"
 }
