package.json update

--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "name": "reignitesolutions.github.io",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start:static": "next build && serve out",
+    "serve": "serve out",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.2.3",
+    "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "autoprefixer": "^10.4.19"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "serve": "^14.2.1"
   },
   "description": "Reignite Solutions Next.js website with Tailwind CSS",
   "author": "Reignite Solutions",
