--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reignitesolutions.github.io",
+  "name": "your-project-name",
   "version": "0.1.0",
   "private": true,
   "scripts": {
