--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "build": "NEXT_CONFIG=./next.config.gh-pages.mjs next build",
     "build:ghpages": "NEXT_CONFIG=./next.config.gh-pages.mjs next build",
     "start:static": "next build && serve out",
-
     "serve": "serve out",
     "lint": "next lint"
   },
