--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "lucide-react": "^0.539.0",
+    "next": "^14.2.31",
     "react": "^18",
     "react-dom": "^18",
     "tailwindcss": "^3.4.1"
@@ -21,6 +22,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "serve": "^14.2.1"
+    "serve": "^10.0.2"
   }
 }
