--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@astrojs/sitemap": "^3.6.0",
     "@tailwindcss/vite": "^4.1.16",
-    "astro": "^5.15.3"
+    "astro": "^5.15.3",
+    "lucide-static": "^0.552.0"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
