--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.6.0",
+    "@lucide/astro": "^0.553.0",
     "@tailwindcss/vite": "^4.1.16",
     "astro": "^5.15.3",
     "lucide-static": "^0.552.0"
