--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-static": "^0.552.0"
   },
   "devDependencies": {
+    "@astrojs/cloudflare": "^12.6.11",
     "@astrojs/tailwind": "^6.0.2",
     "@tailwindcss/typography": "^0.5.19",
     "astro-compress": "^2.3.8",
