--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   "dependencies": {
     "@astrojs/sitemap": "^3.6.0",
     "@lucide/astro": "^0.553.0",
-    "@tailwindcss/vite": "^4.1.16",
     "astro": "^5.15.3",
     "lucide-static": "^0.552.0"
   },
   "devDependencies": {
     "@astrojs/cloudflare": "^12.6.11",
-    "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/typography": "^0.5.19",
+    "@tailwindcss/vite": "^4.1.17",
     "astro-compress": "^2.3.8",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^4.1.17"
   }
 }
